Пробная статическая сборка
в CentOS 7 ldd выдает следующее:
./VanessaExtLin32_1_1_2_0.so: /lib64/libm.so.6: version `GLIBC_2.29' not found (required by ./VanessaExtLin32_1_1_2_0.so)
	linux-vdso.so.1 =>  (0x00007ffce74d8000)
	libXtst.so.6 => /lib64/libXtst.so.6 (0x00007f29701d8000)
	libm.so.6 => /lib64/libm.so.6 (0x00007f296fed6000)
	libc.so.6 => /lib64/libc.so.6 (0x00007f296fb08000)
	/lib64/ld-linux-x86-64.so.2 (0x00007f297060c000)
	libX11.so.6 => /lib64/libX11.so.6 (0x00007f296f7ca000)
	libXext.so.6 => /lib64/libXext.so.6 (0x00007f296f5b8000)
	libXi.so.6 => /lib64/libXi.so.6 (0x00007f296f3a8000)
	libxcb.so.1 => /lib64/libxcb.so.1 (0x00007f296f180000)
	libdl.so.2 => /lib64/libdl.so.2 (0x00007f296ef7c000)
	libXau.so.6 => /lib64/libXau.so.6 (0x00007f296ed78000)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,8 @@ add_library(${TARGET} SHARED
 	src/xcb_clip.h
 	src/version.h
 	src/json.hpp
-	src/stdafx.h)
+	src/stdafx.h
+)
 
 target_compile_definitions(${TARGET} PRIVATE UNICODE _UNICODE)
 target_include_directories(${TARGET} PRIVATE include)
@@ -73,13 +74,25 @@ if (UNIX)
 		set(CMAKE_C_FLAGS "-m32 ${CMAKE_C_FLAGS}")
 		set(CMAKE_CXX_FLAGS "-m32 ${CMAKE_CXX_FLAGS}")
 	endif ()
+
 	FIND_PACKAGE(X11 COMPONENTS Xtst)
 	target_link_libraries(${PROJECT_NAME} ${X11_XTest_LIB})
-	target_include_directories(${TARGET} PRIVATE libpng-1.6.37/include)
-#	include_directories(libpng-1.6.37)
-#	include_directories(zlib-1.2.11)
-#	add_subdirectory(libpng-1.6.37)
-#	add_subdirectory(zlib-1.2.11)
+
+	set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+	target_link_libraries(${PROJECT_NAME} -static-libgcc -static-libstdc++)
+	target_link_libraries(${PROJECT_NAME} m)
+
+	set(HAVE_OFF64_T OFF CACHE BOOL  "Build libpng tests" FORCE)
+	add_subdirectory(zlib-1.2.11)
+	target_link_libraries(${PROJECT_NAME} zlibstatic)
+
+	set(PNG_BUILD_ZLIB ${LIBRARY_OUTPUT_PATH} CACHE PATH "zlib build dir" FORCE)
+	set(PNG_SHARED OFF CACHE BOOL "Build shared lib" FORCE)
+	set(PNG_STATIC ON CACHE BOOL "Build static lib" FORCE)
+	set(PNG_TESTS OFF CACHE BOOL  "Build libpng tests" FORCE)
+	add_subdirectory(libpng-1.6.37)
+	target_link_libraries(${PROJECT_NAME} png_static)
+
 else(UNIX)
 	add_definitions(/MT)
 	set(CMAKE_SUPPRESS_REGENERATION 1)
